--- a/index.html
+++ b/index.html
@@ -62,16 +62,17 @@
                 <h1 class="title-education text-center font-family--poppins pb-3 about" data-aos="fade-right"
                     data-aos-duration="1500"> About
                 </h1>
-                <h5 class="font-family--montserrat" data-aos="fade-right" data-aos-duration="1500">Lorem ipsum dolor sit
-                    amet consectetur adipisicing elit. Ex
-                    excepturi repellendus dolores assumenda
-                    corporis laborum fugiat id est nostrum, aperiam beatae explicabo. Dolorum modi perspiciatis iusto
-                    aut tenetur laboriosam amet!</h5>
-                <h5 class="font-family--montserrat" data-aos="fade-right" data-aos-duration="1500">Lorem ipsum dolor sit
-                    amet consectetur adipisicing elit. Ex
-                    excepturi repellendus dolores assumenda
-                    corporis laborum fugiat id est nostrum, aperiam beatae explicabo. Dolorum modi perspiciatis iusto
-                    aut tenetur laboriosam amet!</h5>
+                <h5 class="font-family--montserrat" data-aos="fade-right" data-aos-duration="1500">My name is Edwin
+                    Farrel Juniawan. People usually call me Farrel. I'm very curious, interested , and motivated to
+                    learn and study anything about technology, which is my passion is coding and love to learn a new
+                    thing.
+                    <h5 class="font-family--montserrat" data-aos="fade-right" data-aos-duration="1500">Hard worker,
+                        ambitious, a well organized person, and focused in software development especially web
+                        development (Full Stack). Besides my main job at Binus University, i also work on various side
+                        projects.</h5>
+                    <h5 class="font-family--montserrat" data-aos="fade-right" data-aos-duration="1500">In 2021, I have a
+                        goal to start learning more about mobile application development technologies
+                        such as React Native, Flutter, etc.</h5>
             </div>
         </div>
         <div class="row justify-content-center padding-top-10em">
