--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
                     learn and study anything about technology, which is my passion is coding and love to learn a new
                     thing.
                     <h5 class="font-family--montserrat" data-aos="fade-right" data-aos-duration="1500">Hard worker,
-                        ambitious, a well organized person, and focused in software development especially web
-                        development (Full Stack). Besides my main job at Binus University, i also work on various side
+                        ambitious, a well organized person, and focused in software development especially back-end development. Besides my main job at Binus University, i also work on various side
                         projects.</h5>
                     <h5 class="font-family--montserrat" data-aos="fade-right" data-aos-duration="1500">In 2021, I have a
                         goal to start learning more about mobile application development technologies
@@ -85,7 +84,7 @@
                 <i class="fas fa-university university-icon-modify"></i>
             </div>
             <div class="col-12 col-sm-12 text-align-responsive col-md-5 font-family--montserrat">
-                <h4><strong>2017 - 2021 (Expected)</strong></h4>
+                <h4><strong>2017 - 2021</strong></h4>
                 <h5><strong>Binus University</strong></h5>
                 <h6>Bachelor of Computer Science</h6>
                 <h6 class="color-brown">Majoring in Software Engineering</h6>
@@ -146,8 +145,8 @@
             </div>
             <div class="icon col-md-3 col-sm-6 height-width-100 width-10em text-center pt-4" data-aos="zoom-in-down"
                 data-aos-duration="1500">
-                <img class="image-icon-resize" src="images/Expressjs.png" />
-                <h3 class="font-family--montserrat">Express.js</h3>
+                <img class="image-icon-resize" src="images/nodejs.png" />
+                <h3 class="font-family--montserrat">Node.js</h3>
             </div>
             <div class="icon col-md-3 col-sm-6 height-width-100 text-center pt-4" data-aos="zoom-in-down"
                 data-aos-duration="1500">
@@ -179,6 +178,16 @@
                 <img class="image-icon-resize" src="images/git.png" />
                 <h3 class="font-family--montserrat">Git</h3>
             </div>
+            <div class="icon col-md-3 col-sm-6 height-width-100 text-center pt-4" data-aos="zoom-in-down"
+                data-aos-duration="1500">
+                <img class="image-icon-resize" style="height: 100px; width: 150px;" src="images/aws.png" />
+                <h3 class="font-family--montserrat">Amazon Web Services</h3>
+            </div>
+            <div class="icon col-md-3 col-sm-6 height-width-100 text-center pt-4" data-aos="zoom-in-down"
+                data-aos-duration="1500">
+                <img class="image-icon-resize" style="height: 100px; width: 150px;" src="images/net.png" />
+                <h3 class="font-family--montserrat">.Net</h3>
+            </div>                        
         </div>
         <div class="row justify-content-center pb-5 padding-top-10em">
             <h1 class="title-education text-center font-family--poppins" data-aos="zoom-in-up" data-aos-duration="1500">
@@ -603,7 +612,7 @@
         </div>
     </div>
     <!-- Sma Negeri Modal -->
-    <div class="modal fade" id="sma-negeri-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="manucentric-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -633,7 +642,7 @@
             </div>
         </div>
     </div>
-    <!-- LCAS E-learning Modal -->
+    <!-- Manucentric Modal -->
     <div class="modal fade" id="lcas-elearning-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -643,14 +652,11 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <span class="text-justify">LCAS E-Learning is a web based e-learning application created for Binus
-                        University. This
-                        application
-                        can be used by students to test their abilities and try out before exam.</span>
+                    <span class="text-justify">Manucentric is a web based application for woodworkers.</span>
                     <br>
                     <br>
-                    <span class="text-justify">Tech Stack : <br>- React.js (Frontend) <br>- Laravel (Backend) <br>-
-                        MySQL Database</span>
+                    <span class="text-justify">Tech Stack : <br>- React.js <br>- ASP.Net <br>-
+                        MSSQL Database <br>- Amazon Web Services</span>
                     <br>
                     <br><span class="text-justify">You can see the application here : <a
                             href="http://lcas-quiz.apps.binus.ac.id/" target="_blank">Click
