--- a/index.html
+++ b/index.html
@@ -155,11 +155,6 @@
             </div>
             <div class="icon col-md-3 col-sm-6 height-width-100 text-center pt-4" data-aos="zoom-in-down"
                 data-aos-duration="1500">
-                <img class="image-icon-resize" src="images/android-studio.png" />
-                <h3 class="font-family--montserrat">Android Studio</h3>
-            </div>
-            <div class="icon col-md-3 col-sm-6 height-width-100 text-center pt-4" data-aos="zoom-in-down"
-                data-aos-duration="1500">
                 <img class="image-icon-resize" src="images/mysql.png" />
                 <h3 class="font-family--montserrat">MySQL</h3>
             </div>
@@ -182,12 +177,7 @@
                 data-aos-duration="1500">
                 <img class="image-icon-resize" style="height: 100px; width: 150px;" src="images/aws.png" />
                 <h3 class="font-family--montserrat">Amazon Web Services</h3>
-            </div>
-            <div class="icon col-md-3 col-sm-6 height-width-100 text-center pt-4" data-aos="zoom-in-down"
-                data-aos-duration="1500">
-                <img class="image-icon-resize" style="height: 100px; width: 150px;" src="images/net.png" />
-                <h3 class="font-family--montserrat">.Net</h3>
-            </div>                        
+            </div>                      
         </div>
         <div class="row justify-content-center pb-5 padding-top-10em">
             <h1 class="title-education text-center font-family--poppins" data-aos="zoom-in-up" data-aos-duration="1500">
@@ -263,6 +253,32 @@
                     </button>
                 </div>
             </div>
+            <div class="col-sm-12 col-lg-6 my-project text-center pb-5" data-aos="zoom-in-down"
+                data-aos-duration="1500">
+                <img class="w-100" src="images/manucentric.png" />
+                <div class="d-sm-none d-md-none d-lg-flex overlay-image position-left-9em">
+                    <div class="d-sm-none d-md-none d-lg-flex row pb-4">
+                        <h5 class="text-white font-family--montserrat">Manucentric</h5>
+                    </div>
+                    <div class="d-sm-none d-md-none d-none d-lg-flex row">
+                        <button type="button"
+                            class="font-family--montserrat color-blue--modify border-none background-none cursor-pointer"
+                            data-toggle="modal" data-target="#manucentric-modal">
+                            View Details
+                        </button>
+                    </div>
+                </div>
+                <div class="d-lg-none row pb-4 pt-4 justify-content-center">
+                    <h5 class="text-black font-family--montserrat">Manucentric</h5>
+                </div>
+                <div class="d-lg-none row justify-content-center">
+                    <button type="button"
+                        class="font-family--montserrat color-blue--modify border-none background-none cursor-pointer"
+                        data-toggle="modal" data-target="#manucentric-modal">
+                        View Details
+                    </button>
+                </div>
+            </div>
             <div class="col-sm-12 col-lg-6 my-project text-center" data-aos="zoom-in-down" data-aos-duration="1500">
                 <img class="w-100" src="images/school.png" />
                 <div class="d-sm-none d-md-none d-lg-flex overlay-image position-left-9em">
@@ -288,7 +304,7 @@
                     </button>
                 </div>
             </div>
-            <div class="col-sm-12 col-lg-6 my-project text-center mt-5" data-aos="zoom-in-down"
+            <div class="col-sm-12 col-lg-6 my-project text-center" data-aos="zoom-in-down"
                 data-aos-duration="1500">
                 <img class="w-100" src="images/natasia-lam.jpg" />
                 <div class="d-sm-none d-md-none d-lg-flex overlay-image position-left-9em">
@@ -366,7 +382,7 @@
                     </button>
                 </div>
             </div>
-            <div class="col-sm-12 col-lg-6 my-project text-center mt-5" data-aos="zoom-in-down"
+            <!-- <div class="col-sm-12 col-lg-6 my-project text-center mt-5" data-aos="zoom-in-down"
                 data-aos-duration="1500">
                 <img class="w-100 height-300px" src="images/bloodfor.png" />
                 <div class="d-sm-none d-md-none d-lg-flex overlay-image position-left-9em">
@@ -391,12 +407,36 @@
                         View Details
                     </button>
                 </div>
+            </div> -->
+            <div class="col-sm-12 col-lg-6 my-project text-center mt-5" data-aos="zoom-in-down"
+                data-aos-duration="1500">
+                <img class="w-100" style="height: 240px;" src="images/bloodfor.png" />
+                <div class="d-sm-none d-md-none d-lg-flex overlay-image position-left-9em">
+                    <div class="d-sm-none d-md-none d-lg-flex row pb-4">
+                        <h5 class="text-white font-family--montserrat">Blood Donor Info Mobile App</h5>
+                    </div>
+                    <div class="d-sm-none d-md-none d-none d-lg-flex row">
+                        <button type="button"
+                            class="font-family--montserrat color-blue--modify border-none background-none cursor-pointer"
+                            data-toggle="modal" data-target="#blood-donor-modal">
+                            View Details
+                        </button>
+                    </div>
+                </div>
+                <div class="d-lg-none row pb-4 pt-4 justify-content-center">
+                    <h5 class="text-black font-family--montserrat">Blood Donor Info Mobile App</h5>
+                </div>
+                <div class="d-lg-none row justify-content-center">
+                    <button type="button" data-toggle="modal" data-target="#blood-donor-modal"
+                        class="font-family--montserrat color-blue--modify border-none background-none cursor-pointer">View
+                        Details</button>
+                </div>
             </div>
             <div class="col-sm-12 col-lg-6 my-project text-center mt-5" data-aos="zoom-in-down"
                 data-aos-duration="1500">
                 <img class="w-100" src="images/blog.png" />
                 <div class="d-sm-none d-md-none d-lg-flex overlay-image position-left-9em">
-                    <div class="row pb-4">
+                    <div class="d-sm-none d-md-none d-lg-flex row pb-4">
                         <h5 class="text-white font-family--montserrat">Private Blog Web App</h5>
                     </div>
                     <div class="d-sm-none d-md-none d-none d-lg-flex row">
@@ -612,7 +652,7 @@
         </div>
     </div>
     <!-- Sma Negeri Modal -->
-    <div class="modal fade" id="manucentric-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="sma-negeri-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -643,7 +683,7 @@
         </div>
     </div>
     <!-- Manucentric Modal -->
-    <div class="modal fade" id="lcas-elearning-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="manucentric-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -655,11 +695,11 @@
                     <span class="text-justify">Manucentric is a web based application for woodworkers.</span>
                     <br>
                     <br>
-                    <span class="text-justify">Tech Stack : <br>- React.js <br>- ASP.Net <br>-
-                        MSSQL Database <br>- Amazon Web Services</span>
+                    <span class="text-justify">Tech Stack : <br>- React.js <br>- ASP.NET <br>-
+                        MSSQL Database <br>- Amazon Web Services <br>- Stripe Payment Gateway <br>- Jest Framework</span>
                     <br>
                     <br><span class="text-justify">You can see the application here : <a
-                            href="http://lcas-quiz.apps.binus.ac.id/" target="_blank">Click
+                            href="https://manucentric.com/" target="_blank">Click
                             Here!</a></span>
                 </div>
                 <div class=" modal-footer">
