new style for portfolio

--- a/e-commerce-writer.html
+++ b/e-commerce-writer.html
@@ -94,14 +94,7 @@
                     <h5 class="text-black text-justify font-family--montserrat font-weight-800">This e-commerce was created to sell meditation videos and books by Natasia Lam. Also, this website include information about testimonials and profile about Natasia Lam. This e-commerce integrate with payment gateway to receive payment with all indonesian bank , e-money like OVO, Go-Pay, ShopeePay, DANA, and credit card (Mastercard, Visa, Amex).</h5>
                 </div>
                 <div class="row pb-4 pt-4 justify-content-center">
-                    <h5 class="text-black font-family--montserrat font-weight-800">Tech Stack: <br><br>- Laravel <br><br>- Javascript, AJAX & JQuery <br><br>- Stripe <br><br>- MySQL Database</h5>
-                </div>
-                <div class="d-lg-none row justify-content-center">
-                    <button type="button"
-                        class="font-family--montserrat color-blue--modify border-none background-none cursor-pointer"
-                        data-toggle="modal" data-target="#lcas-elearning-modal">
-                        View Details
-                    </button>
+                    <h5 class="text-black font-family--montserrat font-weight-800">Tech Stack: <br><br>- PHP Laravel <br><br>- Javascript, AJAX & JQuery <br><br>- Stripe <br><br>- MySQL Database</h5>
                 </div>
             </div>
         </div>
@@ -136,7 +129,7 @@
     </div>
     <footer>
         <div class="text-center row justify-content-center font-family--montserrat pt-5 mt-5 mb-4">
-            Copyright &copy; 2021 Edwin Farrel Juniawan.
+            Copyright &copy; 2022 Edwin Farrel Juniawan.
         </div>
     </footer>
 </body>
