--- a/e-learning.html
+++ b/e-learning.html
@@ -79,15 +79,8 @@
                         can be used by students to test their abilities and try out before exam.</h5>
                 </div>
                 <div class="row pb-4 pt-4 justify-content-center">
-                    <h5 class="text-black font-family--montserrat font-weight-800">Tech Stack: <br><br>- React.js (Frontend) <br><br>- Laravel (Backend) <br><br>- Apache
+                    <h5 class="text-black font-family--montserrat font-weight-800">Tech Stack: <br><br>- React.js (Frontend) <br><br>- PHP Laravel (Backend) <br><br>- Apache
                         <br><br>- MySQL Database</h5>
-                </div>
-                <div class="d-lg-none row justify-content-center">
-                    <button type="button"
-                        class="font-family--montserrat color-blue--modify border-none background-none cursor-pointer"
-                        data-toggle="modal" data-target="#lcas-elearning-modal">
-                        View Details
-                    </button>
                 </div>
             </div>
         </div>
@@ -122,7 +115,7 @@
     </div>
     <footer>
         <div class="text-center row justify-content-center font-family--montserrat pt-5 mt-5 mb-4">
-            Copyright &copy; 2021 Edwin Farrel Juniawan.
+            Copyright &copy; 2022 Edwin Farrel Juniawan.
         </div>
     </footer>
 </body>
