--- a/pasarkerja.html
+++ b/pasarkerja.html
@@ -97,14 +97,7 @@
                     <h5 class="text-black text-justify font-family--montserrat font-weight-800">PasarKerja is a web-based application that is used to find work, especially for informal workers. This application was made in the framework of the GarudaHacks Hackathon 2020 competition and must be done within 3 days. PasarKerja application was awarded "Best 12 Application from 227 Application".</h5>
                 </div>
                 <div class="row pb-4 pt-4 justify-content-center">
-                    <h5 class="text-black font-family--montserrat font-weight-800">Tech Stack: <br><br>- Laravel (Backend) <br><br>- React.js (Frontend) <br><br>- MongoDB Database<br><br>- MySQL Database</h5>
-                </div>
-                <div class="d-lg-none row justify-content-center">
-                    <button type="button"
-                        class="font-family--montserrat color-blue--modify border-none background-none cursor-pointer"
-                        data-toggle="modal" data-target="#lcas-elearning-modal">
-                        View Details
-                    </button>
+                    <h5 class="text-black font-family--montserrat font-weight-800">Tech Stack: <br><br>- PHP Laravel (Backend) <br><br>- React.js (Frontend) <br><br>- MongoDB Database<br><br>- MySQL Database</h5>
                 </div>
             </div>
         </div>
@@ -139,7 +132,7 @@
     </div>
     <footer>
         <div class="text-center row justify-content-center font-family--montserrat pt-5 mt-5 mb-4">
-            Copyright &copy; 2021 Edwin Farrel Juniawan.
+            Copyright &copy; 2022 Edwin Farrel Juniawan.
         </div>
     </footer>
 </body>
