--- a/wishforyou.html
+++ b/wishforyou.html
@@ -50,19 +50,19 @@
         <div class="row justify-content-center pb-5 padding-top5em" id="projects">
             <h1 class="text-center font-family--poppins" data-aos="zoom-in-down"
                 data-aos-duration="1500">
-                SMA Negeri 1 Tangerang Web Application
+                WishForYou Web Application
             </h1>
         </div>
         <div class="row justify-content-center pb-5" id="projects">
             <h3 class="text-center font-family--poppins" data-aos="zoom-in-down"
             data-aos-duration="1500">
-            <i>Year: 2020</i>
+            <i>Year: 2021</i>
             </h3>
             <br>
 
         </div>
         <div class="row justify-content-center pb-5" id="projects">
-            <a target="_blank" href="https://smanegeri1-tgr.com/"><h3 class="text-center font-family--poppins" data-aos="zoom-in-down"
+            <a target="_blank" href="https://wishforyou.com/"><h3 class="text-center font-family--poppins" data-aos="zoom-in-down"
             data-aos-duration="1500">
             <i>Visit Website</i>
             </h3>
@@ -74,10 +74,13 @@
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="d-block w-100" src="images/school_2.png" alt="First slide">
+                        <img class="d-block w-100" src="images/wishforyou.png" alt="First slide">
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="images/school.png" alt="Second slide">
+                        <img class="d-block w-100" src="images/wishforyou_2.png" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="images/wishforyou_3.png" alt="First slide">
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -91,12 +94,10 @@
                   </div>
                 <!-- <img class="w-100" src="images/manucentric.png" /> -->
                 <div class="row pb-4 pt-4 justify-content-center">
-                    <h5 class="text-black text-justify font-family--montserrat font-weight-800">Portal website for SMA Negeri 1 Tangerang. On this website
-                        contains information such as school profile, teacher profile,
-                        school awards, etc.</h5>
+                    <h5 class="text-black text-justify font-family--montserrat font-weight-800">Wishforyou is a web application for way to give and receive money for life’s important celebrations. So, you can create event like wedding, birthday, and anniversary in web application. People can give money to that event or people can directly send money to recipient who has been registered in web application.</h5>
                 </div>
                 <div class="row pb-4 pt-4 justify-content-center">
-                    <h5 class="text-black font-family--montserrat font-weight-800">Tech Stack: <br><br>- PHP Laravel <br><br>- Javascript, AJAX & JQuery <br><br>- MySQL Database</h5>
+                    <h5 class="text-black font-family--montserrat font-weight-800">Tech Stack: <br><br>- PHP Laravel <br><br>- Stripe <br><br>- MySQL Database</h5>
                 </div>
             </div>
         </div>
