--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <br />
                 <h5 class="txt-description">I am professional web developer who loves to build web application.</h5>
                 <br />
-                <h5 class="txt-description">3 years experience developing web based systems and apps for international companies. I have experience use laravel, React.js, Node.js, Flask, and integrating Stripe API. I also have experience to manage teams of more than 3 engineers.</h5>
+                <h5 class="txt-description">3 years experience developing web based systems and apps for international companies. I have experience use Laravel, React.js, Node.js, Flask, and integrating Stripe API. I also have experience to manage teams of more than 3 engineers.</h5>
                 <br />
                 <h5 class="txt-description">I focus to make solution for client and deliver client requirements, ensure clients products with good quality.</h5>
                 <br />
@@ -65,6 +65,29 @@
             </h1>
         </div>
         <div class="row justify-content-center pt-5">
+            <div class="col-sm-12 col-lg-12 my-project text-center pb-5" data-aos="zoom-in-down"
+                data-aos-duration="1500">
+                <img class="w-100" src="images/wishforyou.png" />
+                <div class="d-sm-none d-md-none d-lg-flex overlay-image position-left-9em">
+                    <!-- <div class="d-sm-none d-md-none d-none d-lg-flex row">
+                        <button type="button"
+                            class="font-family--montserrat color-blue--modify border-none background-none cursor-pointer"
+                            data-toggle="modal" data-target="#lcas-elearning-modal">
+                            View Details
+                        </button>
+                    </div> -->
+                </div>
+                <div class="row pb-4 pt-4 justify-content-center">
+                    <a href="wishforyou.html"><h5 class="text-black font-family--montserrat font-weight-800">View Details >></h5></a>
+                </div>
+                <div class="d-lg-none row justify-content-center">
+                    <button type="button"
+                        class="font-family--montserrat color-blue--modify border-none background-none cursor-pointer"
+                        data-toggle="modal" data-target="#lcas-elearning-modal">
+                        View Details
+                    </button>
+                </div>
+            </div>
             <div class="col-sm-12 col-lg-12 my-project text-center pb-5" data-aos="zoom-in-down"
                 data-aos-duration="1500">
                 <img class="w-100" src="images/quiz_2.png" />
@@ -357,7 +380,7 @@
             </div>
             <div class="icon col-md-3 col-sm-6 height-width-100 text-center pt-4" data-aos="zoom-in-down"
                 data-aos-duration="1500">
-                <img class="image-icon-resize" src="images/laravel.png" />
+                <img class="image-icon-resize" src="images/Laravel.png" />
                 <h3 class="font-family--montserrat">Laravel</h3>
             </div>
             <div class="icon col-md-3 col-sm-6 height-width-100 width-10em text-center pt-4" data-aos="zoom-in-down"
@@ -468,7 +491,7 @@
     </div>
     <footer>
         <div class="text-center row justify-content-center font-family--montserrat pt-5 mt-5 mb-4">
-            Copyright &copy; 2021 Edwin Farrel Juniawan.
+            Copyright &copy; 2022 Edwin Farrel Juniawan.
         </div>
     </footer>
     <!-- Blog Modal -->
