fix laravel image gone

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             </div>
             <div class="icon col-md-3 col-sm-6 height-width-100 text-center pt-4" data-aos="zoom-in-down"
                 data-aos-duration="1500">
-                <img class="image-icon-resize" src="images/Laravel.png" />
+                <img class="image-icon-resize" src="images/laravel.png" />
                 <h3 class="font-family--montserrat">Laravel</h3>
             </div>
             <div class="icon col-md-3 col-sm-6 height-width-100 width-10em text-center pt-4" data-aos="zoom-in-down"
