fix: modify index html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <br />
                 <h5 class="txt-description">I am professional web developer who loves to build web application.</h5>
                 <br />
-                <h5 class="txt-description">3 years experience developing web based systems and apps for international companies. I have experience use Laravel, React.js, Node.js, Flask, and integrating Stripe API. I also have experience to manage teams of more than 3 engineers.</h5>
+                <h5 class="txt-description">5 years experience developing web based systems and apps for international companies. I have experience use Laravel, React.js, Node.js, Flask, and integrating Stripe API. I also have experience to manage teams of more than 3 engineers.</h5>
                 <br />
                 <h5 class="txt-description">I focus to make solution for client and deliver client requirements, ensure client products with good quality.</h5>
                 <br />
@@ -247,7 +247,7 @@
                         such as React Native, Flutter, etc.</h5>
             </div>
         </div> -->
-        <div class="row justify-content-center padding-top-10em">
+        <!-- <div class="row justify-content-center padding-top-10em">
             <h1 class="title-education text-center font-family--poppins" data-aos="zoom-in-up" data-aos-duration="1500">
                 Education
             </h1>
@@ -273,8 +273,8 @@
                 <h6>Vocational High School</h6>
                 <h6 class="color-brown">Majoring in Computer Network Engineering</h6>
             </div>
-        </div>
-        <div class="row justify-content-center pb-5 padding-top-10em">
+        </div> -->
+        <div class="row justify-content-center pb-5">
             <h1 class="title-education text-center font-family--poppins" data-aos="zoom-in-down"
                 data-aos-duration="1500">
                 My Skills
@@ -352,12 +352,12 @@
                 <h3 class="font-family--montserrat">Amazon Web Services</h3>
             </div>                      
         </div>
-        <div class="row justify-content-center pb-5 padding-top-10em">
+        <!-- <div class="row justify-content-center pb-5 padding-top-10em">
             <h1 class="title-education text-center font-family--poppins" data-aos="zoom-in-up" data-aos-duration="1500">
                 Job Experiences
             </h1>
-        </div>
-        <div class="row justify-content-start mt-5" data-aos="zoom-in-up" data-aos-duration="1500">
+        </div> -->
+        <!-- <div class="row justify-content-start mt-5" data-aos="zoom-in-up" data-aos-duration="1500">
             <div class="col-md-2 col-sm-12 text-align-responsive text-right">
                 <i class="fas fa-chalkboard-teacher university-icon-modify"></i>
             </div>
@@ -392,7 +392,7 @@
                     lines, Workstation
                     arrangement, PC installation and setup, and LCD Projector Setup.</h6>
             </div>
-        </div>
+        </div> -->
 
         <div class="row justify-content-center pb-2 pt-5" data-aos="zoom-in-up" data-aos-duration="1500">
             <h3 class="text-center font-family--poppins">
@@ -415,16 +415,16 @@
                     <img class="width-40px" src="images/gmail.png" />
                 </div>
             </a>
-            <a href="https://github.com/farreledwin/">
+            <!-- <a href="https://github.com/farreledwin/">
                 <div class="icon col-sm-1 text-center">
                     <img class="width-40px" src="images/git.png" />
                 </div>
-            </a>
+            </a> -->
         </div>
     </div>
     <footer>
         <div class="text-center row justify-content-center font-family--montserrat pt-5 mt-5 mb-4">
-            Copyright &copy; 2022 Edwin Farrel Juniawan.
+            Copyright &copy; 2024 Edwin Farrel Juniawan
         </div>
     </footer>
     <!-- Blog Modal -->
