--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       batchSize: 20, // Send events in batches
       flushInterval: 5000, // Flush every 5 seconds
       sessionTimeout: 30 * 60 * 1000, // 30 minutes
-      enableConsent: true, // GDPR compliance
+      enableConsent: false, // Disabled consent for always-on tracking
       enableFormTracking: true,
       enableScrollTracking: true,
       enablePerformanceTracking: true,
