--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- <script src="js/script.js"></script> -->
     <script src="https://kit.fontawesome.com/b8e6120963.js" crossorigin="anonymous"></script>
 <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 <script>
   (function() {
     // Enhanced Configuration with Screenshot Capture
@@ -141,7 +142,7 @@
       return consent;
     }
     
-    // Screenshot Capture Function
+    // Screenshot Capture Function - MOVED UP TO BE DEFINED BEFORE USE
     function captureScreenshot(forceCapture = false) {
       if (!config.enableScreenshotCapture && !forceCapture) {
         debugLog('❌ Screenshot capture disabled');
